--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.0.6",
     "element-plus": "^2.2.9",
     "pinia": "^2.0.16",
     "vue": "^3.2.37"
@@ -17,6 +16,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
     "typescript": "^4.6.4",
+    "unplugin-auto-import": "^0.9.2",
+    "unplugin-element-plus": "^0.4.1",
+    "unplugin-vue-components": "^0.21.1",
     "vite": "^3.0.0",
     "vue-tsc": "^0.38.4"
   }
