--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "unplugin-element-plus": "^0.4.1",
     "unplugin-vue-components": "^0.21.1",
     "vite": "^3.0.0",
-    "vue-tsc": "^0.38.4"
+    "vue-tsc": "^0.38.4",
+    "wc-github-corners": "^0.1.5"
   }
 }
