--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@element-plus/icons-vue": "^2.0.6",
     "@vitejs/plugin-vue": "^3.0.0",
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.9.2",
