--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "mock": "esno mock"
   },
   "dependencies": {
     "element-plus": "2.2.28",
@@ -15,13 +16,16 @@
   },
   "devDependencies": {
     "@element-plus/icons-vue": "2.0.10",
+    "@types/ws": "^8.5.4",
     "@vitejs/plugin-vue": "4.0.0",
+    "esno": "^0.16.3",
     "typescript": "4.9.4",
     "unplugin-auto-import": "0.13.0",
     "unplugin-element-plus": "0.4.1",
     "unplugin-vue-components": "0.23.0",
     "vite": "4.0.4",
     "vue-tsc": "1.0.24",
-    "wc-github-corners": "0.1.5"
+    "wc-github-corners": "0.1.5",
+    "ws": "^8.12.0"
   }
 }
