--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "element-plus": "2.2.28",
+    "monaco-editor": "^0.34.1",
     "pinia": "2.0.29",
     "vue": "3.2.45"
   },
@@ -24,6 +25,7 @@
     "unplugin-element-plus": "0.4.1",
     "unplugin-vue-components": "0.23.0",
     "vite": "4.0.4",
+    "vite-plugin-monaco-editor": "^1.1.0",
     "vue-tsc": "1.0.24",
     "wc-github-corners": "0.1.5",
     "ws": "^8.12.0"
